--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^2.6.5",
     "feather-icons": "^4.28.0",
     "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuejs-datepicker": "^1.6.2",
